--- a/css/popup.css
+++ b/css/popup.css
@@ -6,7 +6,7 @@
 		position: fixed; 
 		height: 100%;
 		width: 100%;
-		background: #000;
+		background: #aaa;
 		background: rgba(0,0,0,.8);
 		z-index: 100;
 		display: none;
