--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,12 @@
 
 }
 
+a.link:link {color: #FFFFFF;}
+a.link:visited {color: #FFFFFF;}
+a.link:active {color: #ccc;}
+a.link:hover {color: #aaa;}
+
+
 .main_div {
   /* height:500px;
    margin-top: -250px;
@@ -39,12 +45,12 @@
    height: 30px;
    width: 100%;
    border:0px solid #FFFFFF;
-   opacity: 0.5;
+   opacity: 0.7;
    filter:Alpha(Opacity=70);
 }
 
 .logo{
-   top: 50px;
+   top: 5px;
    left: 0px;
    position: absolute;
    border:0px solid #FFFFFF;
@@ -52,17 +58,18 @@
 }
 
 .footer {	
-   padding:0px;
-   padding-left:5px;
-   padding-top:5px;
+  padding:0px;
+  padding-left:5px;
+  padding-top:5px;
   position: fixed;
   bottom: 0;
   left: 0;
+  text-align:center;
   height: 130px;
   border:0px solid #FFFFFF;
   background-color: #333333;
   width: 100%;
-  opacity: 0.5;
+  opacity: 0.7;
   filter:Alpha(Opacity=20);
 }
 
@@ -76,15 +83,29 @@
 }
 
 .inhalt {
-   margin: 40px auto;
+   margin: 30px auto;
    background: #333;
    padding:0px;
    padding-left:10px;
    padding-top:10px;
-   opacity: 0.5;
+   opacity: 0.7;
    filter:Alpha(Opacity=50);
-   height:490px;
-   width:890px;
+   width: 800px;
+   height:50%;
+   position: relative;
+   box-shadow: 0px 0px 20px 2px #000000;
+}
+
+.image_box {
+   margin: 5px auto;
+   background: #333;
+   padding:0px;
+   padding-left:10px;
+   padding-top:10px;
+   opacity: 0.7;
+   filter:Alpha(Opacity=50);
+   width: 800px;
+   height:200px;
    position: relative;
    box-shadow: 0px 0px 20px 2px #000000;
 }
