--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,15 @@ a.link:hover {color: #aaa;}
    border:0px solid #FFFFFF;
 }
 
+.immage{
+
+   opacity: 1.0;
+   filter:Alpha(Opacity=100);
+   height:95%;
+
+
+}
+
 .inhalt {
    margin: 30px auto;
    background: #333;
