--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
   background-size:2100px 1400px;
   background-repeat:no-repeat;  
   overflow-x:hidden;
-  color:#ddd;
+  color:#ffffff;
   font-size:12px;
   font-weight:normal;
   font-family: Arial, Helvetica, sans-serif;
@@ -82,12 +82,10 @@ a.link:hover {color: #aaa;}
    border:0px solid #FFFFFF;
 }
 
-.immage{
+.image_div{
 
-   opacity: 1.0;
-   filter:Alpha(Opacity=100);
-   height:95%;
-
+   border: 1px solid #ffffff;
+   z-index:2;
 
 }
 
@@ -97,13 +95,20 @@ a.link:hover {color: #aaa;}
    padding:0px;
    padding-left:10px;
    padding-top:10px;
-   opacity: 0.7;
-   filter:Alpha(Opacity=50);
    width: 800px;
    height:50%;
    position: relative;
    box-shadow: 0px 0px 20px 2px #000000;
+   z-index:-1;
 }
+
+
+.opacity {   
+    opacity: 0.5;       /* modern browser */  
+    -moz-opacity: 0.5;  /* older Mozilla browser */  
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)"; /* IE8 in Standard Compliant Mode */  
+    filter:alpha(opacity=50); /* IE5.x -7.0 */  
+} 
 
 .image_box {
    margin: 5px auto;
@@ -111,8 +116,6 @@ a.link:hover {color: #aaa;}
    padding:0px;
    padding-left:10px;
    padding-top:10px;
-   opacity: 0.7;
-   filter:Alpha(Opacity=50);
    width: 800px;
    height:200px;
    position: relative;
